--- a/drinks_api/templates/index.html
+++ b/drinks_api/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Welcome to Drinks API</h1>
     <h2>How to use the API</h2>
-    <h3>See all Drinks</h3>
+    <h3>See all <a href="{% url 'drinks' %}">Drinks</a></h3>
     <p>Redirect to /drinks/ to see all drinks</p>
     <h3>See detailed Drink</h3>
     <p>Redirect to /drinks/id/ (where id = drink id) to see specific drink details</p>
